<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lib_pub_color_bg_main"
    android:orientation="vertical">

    <com.d.music.widget.TitleLayout
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_pub_dimen_title_height"
        android:background="@color/lib_pub_color_main"
        app:lib_pub_tl_leftDrawable="@drawable/module_common_ic_title_back"
        app:lib_pub_tl_middleText="title"
        app:lib_pub_tl_rightText="@string/module_common_select_all"
        skin:enable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <include layout="@layout/lib_pub_layout_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_pub_dimen_item_height"
        android:background="@color/lib_pub_color_bg_sub">

        <LinearLayout
            android:id="@+id/llyt_add_to_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/module_common_dimen_item_icon"
                android:layout_height="@dimen/module_common_dimen_item_icon"
                android:background="@color/lib_pub_color_main"
                android:src="@drawable/module_local_ic_handle_addtolist"
                skin:enable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lib_pub_dimen_item_margin_top"
                android:text="@string/module_common_add_to_list"
                android:textColor="@color/lib_pub_color_main"
                android:textSize="@dimen/lib_pub_dimen_text_small"
                skin:enable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyt_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/module_common_dimen_item_icon"
                android:layout_height="@dimen/module_common_dimen_item_icon"
                android:background="@color/lib_pub_color_main"
                android:src="@drawable/module_local_ic_handle_delete"
                skin:enable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lib_pub_dimen_item_margin_top"
                android:text="@string/module_common_delete"
                android:textColor="@color/lib_pub_color_main"
                android:textSize="@dimen/lib_pub_dimen_text_small"
                skin:enable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyt_revoke"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/module_common_dimen_item_icon"
                android:layout_height="@dimen/module_common_dimen_item_icon"
                android:background="@color/lib_pub_color_main"
                android:src="@drawable/module_local_ic_handle_reset"
                skin:enable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lib_pub_dimen_item_margin_top"
                android:text="@string/module_common_undo"
                android:textColor="@color/lib_pub_color_main"
                android:textSize="@dimen/lib_pub_dimen_text_small"
                skin:enable="true" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>